--- a/latter/student/student_home.html
+++ b/latter/student/student_home.html
@@ -8,35 +8,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel='stylesheet' href='360ProTrack/nav.css'>
+    <link rel='stylesheet' href='../../nav.css'>
 </head>
 
 <body>
-    Hello!
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-9">
+        <div class="row">            
+            <div class="col-md-8">
                 <!-- Content for the rest of the page (left 4/5) -->
-                <!-- Images to Open Modals-->
+                <h2 style="text-align: center;">
+                <br>
+                    Courses
+                </h2>
+                <!-- Course Cards -->
                 <div class="container-fluid">
                     <div class="row" style="height: 100px;">
-                        <!-- <div class="col-md-8">
-                            <div class="image-container">
-                                <img class="cropped-image cropped-image" type="button" data-bs-toggle="modal"
-                                    data-bs-target="#myModal" src="uidaho.jpg" alt="Image 1">
+                        <div class="container mt-3 col-md-4" type="button" data-bs-toggle="modal" data-bs-target="#myModal" onclick="setModalTitle('CS 360')">
+                            <div class="card bg-success text-white">
+                                <div class="card-body">CS 360</div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="image-container">
-                                <img class="cropped-image cropped-image" type="button" data-bs-toggle="modal"
-                                    data-bs-target="#myModal" src="green.jpg" alt="Image 2">
+                        <div class="container mt-3 col-md-4" type="button" data-bs-toggle="modal" data-bs-target="#myModal" onclick="setModalTitle('CS 383')">
+                            <div class="card bg-success text-white">
+                                <div class="card-body">CS 383</div>
                             </div>
-                        </div> -->
-                        <div class="col-md-1 image-container text-danger container-md" style="background-color: lightblue;">
-                            Class 1
-                        </div>
-                        <div class="col-md-1 text-danger container-md" style="background-color: lightblue;">
-                            Class 2
                         </div>
                     </div>
 
@@ -48,19 +43,18 @@
 
                             <!-- Modal Header -->
                             <div class="modal-header">
-                                <h4 class="modal-title">Image Modal</h4>
+                                <h4 class="modal-title" id="modalTitle">Course Name</h4>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                             </div>
 
                             <!-- Modal body -->
                             <div class="modal-body">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore
-                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                laboris nisi ut
-                                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                velit esse
-                                cillum dolore eu fugiat nulla pariatur.
+                                This is where we can link to project info?
+                                <div class="container mt-3 col-md-4" type="button" data-bs-toggle="modal" data-bs-target="#myModal">
+                                    <div class="card text-success">
+                                        <div class="card-body">Title</div>
+                                    </div>
+                                </div>
                             </div>
 
                             <!-- Modal footer -->
@@ -71,11 +65,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <!-- A grey vertical navbar on the right side (1/5) -->
                 <nav class="navbar bg-white navbar-expand-md flex-md-column" style="height: 100%;">
-                <!-- <nav class="navbar bg-white navbar-expand-md" style="height: 100%;"> -->
-                
                     <h1 style="color:black">
                         Student ProTrack
                     </h1>
@@ -86,7 +78,7 @@
                             <a class="nav-link" style="color:black" href="student_home.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color:black" href="contact.html">CONTACT</a>
+                            <a class="nav-link" style="color:black" href="student_contact.html">CONTACT</a>
                         </li>
                         <br>
                     </ul>
@@ -94,6 +86,14 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function setModalTitle(title) {
+            document.getElementById("modalTitle").innerText = title;
+        }
+    </script>
+
+
 </body>
 
 </html>
