--- a/Front/login.html
+++ b/Front/login.html
@@ -8,8 +8,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</head>
         <body style="background-color: slategray">
-            <div class="row" style="padding=200px">
-                <div class="row" style='padding-bottom: 100px'></div>
+            <div class="row" style="padding: 200px;">
+                <div class="row" style='padding-bottom: 100px;'></div>
                 <div class="row">
                                 <div class="col-md-2" style="padding-top: 100px;"></div>
                                 <div class="col-md-8" style="background-color: whitesmoke; padding-top: 100px; padding-bottom: 100px">
