--- a/latter/student/student_contact.html
+++ b/latter/student/student_contact.html
@@ -27,15 +27,15 @@
                     </button> -->
                     <input type="text" class="form-control dropdown-toggle" id="pwd" data-bs-toggle="dropdown" placeholder="Search for a recipient..." name="pswd">
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        <li><a class="dropdown-item" href="#">Link 2</a></li>
-                        <li><a class="dropdown-item" href="#">Link 3</a></li>
+                        <li><a class="dropdown-item" href="#">Professor Smith</a></li>
+                        <li><a class="dropdown-item" href="#">Jane Thomas</a></li>
+                        <li><a class="dropdown-item" href="#">Bob Jones</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-4">
                 <!-- A grey vertical navbar on the right side (1/5) -->
-                <nav class="navbar bg-white navbar-expand-md flex-md-column" style="height: 100%;">
+                <nav class="navbar navbar-expand-md flex-md-column" style="height: 100%; background-color: darkseagreen;">
                     <h1 style="color:black">
                         Student ProTrack
                     </h1>
