--- a/latter/student/student_home.html
+++ b/latter/student/student_home.html
@@ -24,12 +24,12 @@
                 <div class="container-fluid">
                     <div class="row" style="height: 100px;">
                         <div class="container mt-3 col-md-4" type="button" data-bs-toggle="modal" data-bs-target="#myModal" onclick="setModalTitle('CS 360')">
-                            <div class="card bg-success text-white">
+                            <div class="card text-black" style="background-color: darkseagreen;">
                                 <div class="card-body">CS 360</div>
                             </div>
                         </div>
                         <div class="container mt-3 col-md-4" type="button" data-bs-toggle="modal" data-bs-target="#myModal" onclick="setModalTitle('CS 383')">
-                            <div class="card bg-success text-white">
+                            <div class="card text-black" style="background-color: darkseagreen;">
                                 <div class="card-body">CS 383</div>
                             </div>
                         </div>
@@ -49,10 +49,13 @@
 
                             <!-- Modal body -->
                             <div class="modal-body">
-                                This is where we can link to project info?
-                                <div class="container mt-3 col-md-4" type="button" data-bs-toggle="modal" data-bs-target="#myModal">
+                                Project #6: iHome
+                                <div class="" type="button" data-bs-toggle="modal" data-bs-target="#myModal">
                                     <div class="card text-success">
-                                        <div class="card-body">Title</div>
+                                        <div class="card-body">View Project</div>
+                                    </div>
+                                    <div class="card text-success">
+                                        <div class="card-body">Edit Project</div>
                                     </div>
                                 </div>
                             </div>
@@ -67,7 +70,7 @@
             </div>
             <div class="col-md-4">
                 <!-- A grey vertical navbar on the right side (1/5) -->
-                <nav class="navbar bg-white navbar-expand-md flex-md-column" style="height: 100%;">
+                <nav class="navbar navbar-expand-md flex-md-column" style="height: 100%; background-color: darkseagreen;">
                     <h1 style="color:black">
                         Student ProTrack
                     </h1>
