update title working

--- a/latter/student/student_contact.html
+++ b/latter/student/student_contact.html
@@ -43,7 +43,7 @@
                     <!-- Links -->
                     <ul class="navbar-nav flex-column" id="navbar">
                         <li class="nav-item">
-                            <a class="nav-link" style="color:black" href="student_home.html">HOME</a>
+                            <a class="nav-link" style="color:black" href="student_home.php">HOME</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" style="color:black" href="student_contact.html">CONTACT</a>
