--- a/latter/student/student_plan.html
+++ b/latter/student/student_plan.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 require('../../Front/db.php');
 include("../../Front/auth_session.php");
 // include 'update_project_name.php';
@@ -20,7 +20,7 @@ if($currentUserType!=0){
 	session_abort();
 	header("Location: ../../Front/login.php");
 }
-?>
+?> -->
 <!DOCTYPE html>
 <html>
 
