--- a/latter/student/student_syllabus.html
+++ b/latter/student/student_syllabus.html
@@ -25,7 +25,7 @@ if($currentUserType!=0){
 <html>
 
 <head>
-    <title>Feedback</title>
+    <title>Syllabus</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -36,5 +36,102 @@ if($currentUserType!=0){
 </head>
 
 <body>
-    <h1>Syllabus</h1>
+    <div class="container-fluid">
+        <div class="row">            
+            <div class="col-md-8">
+                <!-- Content for the rest of the page (left 4/5) -->
+                <h2 style="text-align: center;">
+                <br>
+                    Syllabus
+                </h2>
+				<p>
+                    <strong>Project Title:</strong> ProTrack
+                    <br>
+                    <strong>Course Title:</strong> CS360
+                    <br>
+                    <strong>Instructor:</strong> <span style="color: green;">Dr. Jones</span> 
+                    <br>
+                    <strong>Collaborators:</strong> <span style="color: mediumblue;">Meow2, studentMeow, Jane Smith</span> 
+                    <br><br>
+                    <h4>Project Description:</h4> 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce hendrerit nibh eget ipsum commodo, sed eleifend purus ullamcorper. Vivamus vel odio euismod, sodales mauris vel, fringilla dui. Proin ullamcorper quam ac magna pretium, quis vehicula mi sodales. Sed eu ligula vel massa laoreet iaculis.
+                    <br><br>
+                    <strong>Project Objectives:</strong> 
+                    <br>
+                    Lorem ipsum dolor sit amet
+                    Consectetur adipiscing elit
+                    Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    Ut enim ad minim veniam
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                    <br><br>
+                    <h3>Grading Policy:</h3> 
+                    Database Design: 40% <br>
+                    Presentations: 30% <br>
+                    Midterm Demo: 15% <br>
+                    Final Demo: 15% <br>
+                    <br>
+                    <h3>Tasks:</h3> 
+                    Week 1: Learn Methods
+                    <br>
+                    Reading: Chapters 1-2
+                    Assignment: Research topic proposal
+                    <br><br>
+                    Week 2: [Topic] Fundamentals
+                    <br>
+                    Reading: Chapters 3-4
+                    Assignment: Literature review
+                    <br><br>
+                    Week 3: [Topic] Implementation
+                    <br>
+                    Reading: Chapters 5-6
+                    Assignment: Project proposal draft
+                    <br><br>
+                    Week 4: Project Development
+                    <br>
+                    Assignment: Project milestone 1
+                    Week 5: Project Progress Review
+                    <br>
+                    Assignment: Project milestone 2
+                    <br><br>
+                    Week 6: Finalizing Project
+                    <br>
+                    Assignment: Project presentation preparation
+                    <br><br>
+                    Week 7: Final Project Presentation
+                    <br>
+                    Assignment: Final project submission
+                    <br><br>
+                    Week 8: Course Wrap-Up and Review
+                    <br>
+                    Final Exam
+                    <br><br><br>
+                    <strong>Note:</strong>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt purus in nunc condimentum bibendum. Donec nec risus urna. Nulla facilisi. Nulla sit amet purus id libero fringilla interdum
+                </p>
+
+            </div>
+
+			
+			<!--SIDE NAVBAR-->
+            <div class="col-md-4">
+                <!-- A vertical navbar on the right side (1/5) -->
+                <nav class="navbar navbar-expand-md flex-md-column" style="height: 100%; background-color: darkseagreen;">
+                    <h1 style="color:black">
+                        Student ProTrack
+                    </h1>
+                    <br>
+                    <!-- Links -->
+                    <ul class="navbar-nav flex-column" id="navbar">
+                        <li class="nav-item active">
+                            <a class="nav-link" style="color:black" href="student_home.php">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color:black" href="student_contact.php">CONTACT</a>
+                        </li>
+                        <br>
+                    </ul>
+                </nav>
+            </div>
+			
+        </div>
+    </div>
 </body>
