final demo done!

--- a/latter/student/student_syllabus.html
+++ b/latter/student/student_syllabus.html
@@ -118,6 +118,9 @@ if($currentUserType!=0){
                     <h1 style="color:black">
                         Student ProTrack
                     </h1>
+                    <p>
+						<a class="nav-link" style="color:black" href="../../Front/logout.php">Logout</a>
+					</p>
                     <br>
                     <!-- Links -->
                     <ul class="navbar-nav flex-column" id="navbar">
